Upgrade versions and delete unused "early access" stuff